@@ -106,8 +106,8 @@ public class OIDCRepository implements ClientRegistrationRepository, Iterable<Cl
         .followRedirects(HttpClient.Redirect.NORMAL)
         .build();
     for (OIDCConfiguration configuration : oidcConfigurationRepository.findAll()) {
-      String id = String.format("%d", configuration.getId());
-      try {
+      String id = "%d".formatted(configuration.getId());
+      try (httpClient) {
         HttpRequest.Builder requestBuilder = HttpRequest.newBuilder()
             .uri(new URI(configuration.getIssuerUrl() + "/.well-known/openid-configuration"));
         HttpResponse<String> response =
